--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -53,8 +53,7 @@ body:
   - type: checkboxes
     attributes:
       label: Checklist
-      description: |
-        Let's make sure you've properly done due diligence when reporting this issue!
+      description: Let's make sure you've properly done due diligence when reporting this issue!
       options:
         - label: I have searched the open issues for duplicates.
           required: true
