--- a/.github/workflows/pyright.yml
+++ b/.github/workflows/pyright.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ '3.8', '3.9', '3.10' ]
+        python-version: [ "3.8" ]
 
     steps:
       - name: Checkout Repository
@@ -21,8 +21,8 @@ jobs:
 
       - name: Install PyRight & Dependencies
         run: |
-          pip install -U pip pyright
-          pip install -Ur requirements.txt
+          pip install -U poetry pyright
+          poetry install --no-dev
 
       - name: Run PyRight
         run: pyright ./
